--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
      <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello Git!</h1>
+    <h1>Hello World!</h1>
     <p>This is my first project with version control.</p>
 </body>
 </html>
